Add Time dimension for Japanese language - Part 1

--- a/duckling.cabal
+++ b/duckling.cabal
@@ -368,6 +368,7 @@ library
                      , Duckling.Duration.HU.Rules
                      , Duckling.Duration.IT.Rules
                      , Duckling.Duration.JA.Corpus
+                     , Duckling.Duration.JA.Rules
                      , Duckling.Duration.KA.Corpus
                      , Duckling.Duration.KA.Rules
                      , Duckling.Duration.KO.Corpus
@@ -741,6 +742,8 @@ library
                      , Duckling.Time.HU.Rules
                      , Duckling.Time.IT.Corpus
                      , Duckling.Time.IT.Rules
+                     , Duckling.Time.JA.Corpus
+                     , Duckling.Time.JA.Rules
                      , Duckling.Time.KA.Corpus
                      , Duckling.Time.KA.Rules
                      , Duckling.Time.KO.Corpus
@@ -1148,6 +1151,7 @@ test-suite duckling-test
                      , Duckling.Time.HE.Tests
                      , Duckling.Time.HU.Tests
                      , Duckling.Time.IT.Tests
+                     , Duckling.Time.JA.Tests
                      , Duckling.Time.KA.Tests
                      , Duckling.Time.KO.Tests
                      , Duckling.Time.NB.Tests
